--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -162,7 +162,7 @@
                       </div>
                       <div class="text-box">
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
-                              <strong>Dalla Musica Concreta alla Computer Music</strong>
+                              <strong>Dalla Musica Concreta alla Musica Digitale</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
