--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -207,7 +207,7 @@
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <a href="https://www.gabrielavelitch.com/downloads/learn/patch_1.maxpat">MaxMSP - patch_1</a>
                             <ul>
-                              <li>Oscillatore sinusoidale</li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/oscillatore_sinusoidale.maxpat">Oscillatore sinusoidale</a></li>
                               <li>Inviluppo</li>
                               <li>Glissando</li>
                               <li>Sintesi additiva</li>
