--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -208,7 +208,7 @@
                             <a href="https://www.gabrielavelitch.com/downloads/learn/patch_1.maxpat">MaxMSP - patch_1</a>
                             <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/oscillatore_sinusoidale.maxpat">Oscillatore sinusoidale</a></li>
-                              <li>Inviluppo</li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/inviluppo.maxpat">Inviluppo</a></li>
                               <li>Glissando</li>
                               <li>Sintesi additiva</li>
                               <li>AM/RM</li>
