--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -211,7 +211,7 @@
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/inviluppo.maxpat">Inviluppo</a></li>
                               <li>Glissando</li>
                               <li>Sintesi additiva</li>
-                              <li>AM/RM</li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/am_rm.maxpat">AM/RM</a></li>
                               <li>Save&store</li>
                               <li>Recorder</li>
                           </h5>
