--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -209,7 +209,7 @@
                             <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/oscillatore_sinusoidale.maxpat">Oscillatore sinusoidale</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/inviluppo.maxpat">Inviluppo</a></li>
-                              <li>Glissando</li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/glissando.maxpat">Glissando</a></li>
                               <li>Sintesi additiva</li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/am_rm.maxpat">AM/RM</a></li>
                               <li>Save&store</li>
