--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -210,7 +210,7 @@
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/oscillatore_sinusoidale.maxpat">Oscillatore sinusoidale</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/inviluppo.maxpat">Inviluppo</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/glissando.maxpat">Glissando</a></li>
-                              <li>Sintesi additiva</li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/sintesi_additiva.maxpat">Sintesi additiva</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/am_rm.maxpat">AM/RM</a></li>
                               <li>Save&store</li>
                               <li>Recorder</li>
