--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -205,15 +205,13 @@
                               <strong>Sintesi Sonora</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            <a href="https://www.gabrielavelitch.com/downloads/learn/patch_1.maxpat">MaxMSP - patch_1</a>
+                            <a href="https://www.gabrielavelitch.com/downloads/learn/week_1.maxpat">MaxMSP - week_1</a>
                             <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/oscillatore_sinusoidale.maxpat">Oscillatore sinusoidale</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/inviluppo.maxpat">Inviluppo</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/glissando.maxpat">Glissando</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/sintesi_additiva.maxpat">Sintesi additiva</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/am_rm.maxpat">AM/RM</a></li>
-                              <li>Save&store</li>
-                              <li>Recorder</li>
                           </h5>
                       </div>
                   </div>
