--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -205,7 +205,7 @@
                               <strong>Sintesi Sonora</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            <a href="https://www.gabrielavelitch.com/downloads/learn/week_1.maxpat">MaxMSP - week_1</a>
+                            <a href="https://www.gabrielavelitch.com/downloads/learn/week_1.maxpat">Week 1</a>
                             <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/oscillatore_sinusoidale.maxpat">Oscillatore sinusoidale</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/inviluppo.maxpat">Inviluppo</a></li>
