--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -205,13 +205,12 @@
                               <strong>Sintesi Sonora</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            <a href="https://www.gabrielavelitch.com/downloads/learn/week_1.maxpat">Week 1</a>
-                            <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/oscillatore_sinusoidale.maxpat">Oscillatore sinusoidale</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/inviluppo.maxpat">Inviluppo</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/glissando.maxpat">Glissando</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/sintesi_additiva.maxpat">Sintesi additiva</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/am_rm.maxpat">AM/RM</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/week_1.maxpat">Week 1 - patch riassuntiva</a></li>
                           </h5>
                       </div>
                   </div>
