--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -219,6 +219,19 @@
       </div>
   </section>
 
+<!-- Consegna-->
+  <section data-bs-version="5.1" class="content7 cid-sZFF3RDqr1" id="content7-2d">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-12 col-md-10">
+                  <blockquote>
+                  <h5 class="mbr-section-title mbr-fonts-style mb-2 display-4"><strong>CONSEGNA</strong></h5>
+                  <p class="mbr-text mbr-fonts-style display-4">Con le tecniche di sintesi discusse durante la lezione "<strong>Week 1</strong>":<br><br>- ideare 10 suoni<br>- durata suono: 20ms &lt; 10s<br>- campionare i suoni ottenuti<br>- salvare i suoni in una cartella nominandola "<em>matricola_cognome_nome</em>_esercizio1"</p></blockquote>
+              </div>
+          </div>
+      </div>
+  </section>
+
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
