--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -140,7 +140,7 @@
 </section>
 
 
-  <!-- Index-->
+  <!-- Week 1-->
 
   <section data-bs-version="5.1" class="features19 cid-sZl8n0cr2l" id="features20-2c">
       <div class="container">
@@ -162,7 +162,7 @@
                       </div>
                       <div class="text-box">
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
-                              <strong>Dalla Musica Concreta alla Musica Digitale</strong>
+                              <strong>Storia della Musica Elettroacustica</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
@@ -205,12 +205,14 @@
                               <strong>Sintesi Sonora</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
+                            <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/oscillatore_sinusoidale.maxpat">Oscillatore sinusoidale</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/inviluppo.maxpat">Inviluppo</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/glissando.maxpat">Glissando</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/sintesi_additiva.maxpat">Sintesi additiva</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/am_rm.maxpat">AM/RM</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/week_1.maxpat">Week 1 - patch riassuntiva</a></li>
+                            </ul>
                           </h5>
                       </div>
                   </div>
@@ -226,7 +228,95 @@
               <div class="col-12 col-md-10">
                   <blockquote>
                   <h5 class="mbr-section-title mbr-fonts-style mb-2 display-4"><strong>CONSEGNA</strong></h5>
-                  <p class="mbr-text mbr-fonts-style display-4">Con le tecniche di sintesi discusse durante la lezione "<strong>Week 1</strong>":<br><br>- ideare 10 suoni<br>- durata suono: 20ms &lt; 10s<br>- campionare i suoni ottenuti<br>- salvare i suoni in una cartella nominandola "<em>matricola_cognome_nome</em>_esercizio1"</p></blockquote>
+                  <p class="mbr-text mbr-fonts-style display-4"
+                  >Con le tecniche di sintesi discusse durante la lezione "<strong>Week 1</strong>":
+                  <br><br>- creare 10 suoni
+                  <br>- durata suono: 20ms &lt; 10s
+                  <br>- campionare i suoni ottenuti
+                  <br>- salvare i suoni in una cartella nominandola "<em>matricola_cognome_nome</em>_esercizio1"
+                </p>
+              </blockquote>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
+  <!-- Week 1-->
+
+  <section data-bs-version="5.1" class="features19 cid-sZl8n0cr2l" id="features20-2c">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-9">
+                  <div class="card-wrapper pb-4">
+                      <div class="card-box align-center">
+                          <h4 class="card-title mbr-fonts-style mb-4 display-2">
+                              <strong>Week 2</strong>
+                          </h4>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-md-8">
+
+                  <div class="item mbr-flex">
+                      <div class="icon-box">
+                          <span class="step-number mbr-fonts-style display-5">1</span>
+                      </div>
+                      <div class="text-box">
+                          <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
+                              <strong>Ascolto e Analisi Elaborati</strong>
+                          </h4>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
+
+                          </h5>
+                      </div>
+                  </div>
+                  <div class="item mbr-flex">
+                      <div class="icon-box">
+                          <span class="step-number mbr-fonts-style display-5">2</span>
+                      </div>
+                      <div class="text-box">
+                          <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
+                              <strong>Elementi di Composizione e Storia della Musica Elettroacustica</strong>
+                          </h4>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
+                            <ul>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_prima_parte.html#content5-1d" title="content5-1d">Computer Music</a></li>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/jean_claude_risset.html">Musica Digitale</a></li>
+                            </ul>
+                          </h5>
+                      </div>
+                  </div>
+                  <div class="item mbr-flex last">
+                      <div class="icon-box">
+                          <span class="step-number mbr-fonts-style display-5">3</span>
+                      </div>
+                      <div class="text-box">
+                          <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
+                              <strong>Sintesi Sonora</strong>
+                          </h4>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
+                            <ul>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/random.maxpat">Random</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/maschera_di_tendanza.maxpat">Maschera di tendenza</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/week_2.maxpat">Week 2 - patch riassuntiva</a></li>
+                            </ul>
+                          </h5>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+<!-- Consegna-->
+  <section data-bs-version="5.1" class="content7 cid-sZFF3RDqr1" id="content7-2d">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-12 col-md-10">
+                  <blockquote>
+                  <h5 class="mbr-section-title mbr-fonts-style mb-2 display-4"><strong>CONSEGNA</strong></h5>
+                  <p class="mbr-text mbr-fonts-style display-4">testo</p></blockquote>
               </div>
           </div>
       </div>
