--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -314,7 +314,9 @@
               <div class="col-12 col-md-10">
                   <blockquote>
                   <h5 class="mbr-section-title mbr-fonts-style mb-2 display-4"><strong>CONSEGNA</strong></h5>
-                  <p class="mbr-text mbr-fonts-style display-4">testo</p></blockquote>
+                  <p class="mbr-text mbr-fonts-style display-4">
+
+                  </p></blockquote>
               </div>
           </div>
       </div>
