--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -204,6 +204,7 @@
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/learn_maxmsp.maxpat">Impariamo MaxMSP</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/oscillatore_sinusoidale.maxpat">Oscillatore sinusoidale</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/inviluppo.maxpat">Inviluppo</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_1/glissando.maxpat">Glissando</a></li>
