--- a/pages/learn/storia_elettroacustica/musica_concreta_secondo_periodo.html
+++ b/pages/learn/storia_elettroacustica/musica_concreta_secondo_periodo.html
@@ -86,14 +86,20 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Anche il più astratto dei pezzi può interagire con il nostro vissuto.
+                    <br><br>
+                    L'accento sull'aspetto acustico non può essere totalmente eliminato neanche da quelle compitissimi che non intervengono con l'umano ma rappresentano solo un paesaggio acustico. Nel momento in cui noi prendiamo una scena acustica e la trasponiamo sulla immaginaria tela degli altoparlanti l'ascolto diventa puramente aurale (aurale significa suggestione, ci porta fuori da quello che intente Emmerson, il termine non è giusto nella lingua italiana ma non abbiamo altri modi corretti per tradurlo).
+                    <br><br>
+                    Dalla base cinematografica (dadaista e surrealista) di Schaeffer, la civiltà radiofonica e la decisione di accedere e speculare su di alcune tecnologie, riviviamo la parabola del concretismo. Le realizzazioni di Schaeffer vengo accettate dal pubblico come qualcosa di radiofonico, ma lo scontro con la musica contemporanea dell’epoca, lo fa fermare e gli fa pensare al concetto di oggetto sonoro e suono acusmatico, e lo fa giungere ad una modalità di descrizione del reale (profilo di energia: inviluppo; altezze: frequenze).
+                    <br><br>
+                    L’astrazione dalla musica tradizionale e la composizione attraverso il rumore viene realizzata con i 5 studi, la musica concreta è per Schaeffer una musica non mediata da un linguaggio o da una sua rappresentazione.
+                    <br><br>
+                    Schaeffer attraverso, tagli, reiterazione, reverse utilizza i rumori e tenta un approccio musicale dal secondo al quarto studio e nel quinto tenta un approccio compositivo per uno sviluppo musicale.
                   </p>
                 </div>
             </div>
@@ -107,25 +113,92 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/MOYNFu45khQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
+                        <strong>P. Henry, P. Schaeffer - Symphonie pour un homme seul (1951)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
-                    </p>
+                      Nel 1951 Pierre Henry e Schaeffer realizzano la Sinfonia per un uomo solo con il primo apparato di spazializzazione dal vivo.
+                      </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<br>
-<br>
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Ma è dopo più di 10 anni, nel 1959 che Schaeffer propone nuovamente 5 studi, questa volta si tratta dello Studio di oggetti dal quale non si parlerà più di rumori ma di oggetti sonori, che diverranno poi oggetti musicali.
+                  <br><br>
+                  Tra il 1948 e 1959 vi è:
+                  <ol>
+                    <li>un superamento della dimensione del collage</li>
+                    <li>lo studio di Colonia realizza i primi pezzi importanti: Studie II (1952-54), Gesang (55- 56), Incontri di Fasce sonore (56-57)</li>
+                    <li>nel 1955 viene fondato lo Studio di Fonologia di Milano)</li>
+                  </ol>
+                </p>
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Successivamente il termine "musica concreta" è stato opposto al termine "musica elettronica" (musica fatta con suoni di sintesi).
+                  <br><br>
+                  Acusmatico ha un termine esoterico (per tutti), non vedi la fonte del suono che ascolto, nella pratica della scrittura un suono che non riconosci. Ma in realtà vedremo bene che non tutta la musica per nastro è acusmatica;</p>
+              </div>
+          </div>
+      </div>
+  </section>
 
+  <!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+    <div class="container">
+        <div class="title-wrapper mb-5">
+        </div>
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/UQ7BZlV_0zQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                        <strong>Pierre Schaeffer - Etude aux objets (1959)</strong>
+                    </h5>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      <ol>
+                      <li><strong>Oggetti esposti</strong>: Scomparso il loop; entro 2" o 3" compare un nuovo elemento, nuovo attacco; sviluppo che non è uno sviluppo; andamento variato della stessa timbrica, o dello stesso oggetto; dialettica tra differenziazione ed il tentativo di simulare una continuità; effetto collage iniziale;
+                      </li>
+                      <li><strong>Oggetti stesi (allungati)</strong>: In linea di massima, maggiore incidenza di evoluzione nel tempo. Attenzione intervallare. Sovrapposizione, rallentamenti. Fasce sonore.
+                      </li>
+                      <li><strong>Oggetti moltiplicati</strong>: ripetizione senza estraniamento. Impressione delle stanze. Commistione sapiente di elementi riconoscibili con altri astratti. Simulazione di una realtà che non c'è. Spazi simulati. Suoni reali e suoni apparentemente reali.
+                      </li>
+                      <li><strong>Oggetti legati</strong>: pezzo in cui è più facile sentire la polifonia dei flussi. Continuo gioco tra figura e sfondo. Fa un po' il contrario rispetto al pezzo precedente. Possiamo concentrarci sui flussi, non tanto su quello che succede come succede nel terzo studio. Pezzo ideale da analizzare.
+                      </li>
+                      <li><strong>Oggetti riassemblati</strong>: come se volesse essere una somma degli studi precedenti. Prendere questo studio e vedere dove gli altri quattro studi intervengono. Carattere barocco (abbondanza di informazioni). Viene giustificato come punto d'arrivo.
+                      </li>
+                    </ol>
+                      </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Cit-->
+  <section data-bs-version="5.1" class="content6 cid-sZjAv9K3j4" id="content6-2a">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-10">
+                  <hr class="line">
+                  <p class="mbr-text align-center mbr-fonts-style my-4 display-7"><strong>“<em>L'ascolto esperto è spesso il dramma di questa musica</em>”</strong><br>Denis Smalley</p>
+                  <hr class="line">
+              </div>
+          </div>
+      </div>
+  </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
