--- a/pages/learn/storia_elettroacustica/luc_ferrari.html
+++ b/pages/learn/storia_elettroacustica/luc_ferrari.html
@@ -168,6 +168,8 @@
   </div>
 </section>
 
+
+<!-- Double Video-->
 <section data-bs-version="5.1" class="video3 cid-sZHrqEhGEq" id="video3-2e">
     <div class="container">
         <div class="mbr-section-head">
@@ -184,6 +186,19 @@
         </div>
     </div>
 </section>
+
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Luc Ferrari studente di conservatorio, viene sanzionato da un provvedimento disciplinare perché fu colto a suonare Bartók. È uno che ancora agli inizi anni '90 non poteva più permettersi l'affitto a Parigi, rifiuta indennizzi. Ribelle votato all'opposizione politica attuale.
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
 
 
 <!-- Prev/Next-->
