--- a/pages/learn/storia_elettroacustica/de_natura_sonorum.html
+++ b/pages/learn/storia_elettroacustica/de_natura_sonorum.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Luc Ferrari</title>
+  <title>Analisi - De Natura Sonorum</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Luc Ferrari</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Analisi - De Natura Sonorum</strong></h4>
             </div>
         </div>
     </div>
@@ -86,12 +86,14 @@
 
 
   <!-- Text-->
+
+
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Luc Ferrari studente di conservatorio, viene sanzionato da un provvedimento disciplinare perché fu colto a suonare Bartók. È uno che ancora agli inizi anni '90 non poteva più permettersi l'affitto a Parigi, rifiuta indennizzi. Ribelle votato all'opposizione politica attuale.
+
                   </p>
                 </div>
             </div>
@@ -105,15 +107,15 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/DD2Gxu4d-hs" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>Luc Ferrari - Etude aux accidents (1958)</strong>
+                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      <strong>Studio di accadimenti, '56 - '58</strong>. Che differenza c'è con l'Etude aux objets di Pierre Schaeffer? Tessitura iterativa, impulsivi e continui, uniformi, omogenei. Per apprezzare un'atmosfera sonora bisogna dare il tempi al cervello per farla propria. Invece di usare mille cose diverse, utilizza due cose in mille modo diversi. Non semplici apparizioni, cerca di agevolare l'ascolto attraverso ridondanza acustica, vero pezzo di musica. Studio può significare anche virtuosismo. Non c'è l'ambizione di chiamarlo pezzo.
+                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
                     </p>
                 </div>
             </div>
@@ -121,73 +123,8 @@
     </div>
 </section>
 
-
-<!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-  <div class="container">
-      <div class="title-wrapper mb-5">
-      </div>
-      <div class="row align-items-center">
-          <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/CqA-m1KSWbM" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-          </div>
-          <div class="col-12 col-lg">
-              <div class="text-wrapper">
-                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                      <strong>Luc Ferrari - Etude aux sons tendus (1958)</strong>
-                  </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    <strong>Suoni tesi</strong>, cura delle dinamiche, non abbiamo l'effetto di annunciazione pedante. Ascoltando avvertiamo i limiti di Schaeffer. È musicale.
-                  </p>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
-
-<!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-  <div class="container">
-      <div class="title-wrapper mb-5">
-      </div>
-      <div class="row align-items-center">
-          <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Y3jysSYSTBE" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-          </div>
-          <div class="col-12 col-lg">
-              <div class="text-wrapper">
-                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                      <strong>Luc Ferrari - Etude floue (1958)</strong>
-                  </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    <strong>Studio sfumato</strong>, sentiremo delle novità. Qual'è il nuovo gesto tecnico? Rallentamento della velocità, gesto tipo di Ferrari. emergono eventi impercettibili se ascoltati alla velocità reale. Si evolve continuamente. Concetto di continuo. Pronuncia dell'impulsivo e del breve. Omogeneità che non ammette più l'apporto di infinito (discutibile, in base all'esperienza). Frammento di silenzio valenza drammaturgia.
-                  </p>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
-
-
-<!-- Double Video-->
-<section data-bs-version="5.1" class="video3 cid-sZHrqEhGEq" id="video3-2e">
-    <div class="container">
-        <div class="mbr-section-head">
-            <h4 class="mbr-section-title mbr-fonts-style mb-0 display-5">
-                <strong>Luc Ferrari - Tautologos I & II</strong></h4>
-        </div>
-        <div class="row mt-4">
-            <div class="col-12 col-md-6 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/R0aWlgQrWdY" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-            </div>
-            <div class="col-12 col-md-6 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/efH0Co6vCBM" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
+<br>
+<br>
 
 
 <!-- Prev/Next-->
