--- a/pages/learn/storia_elettroacustica/de_natura_sonorum.html
+++ b/pages/learn/storia_elettroacustica/de_natura_sonorum.html
@@ -85,21 +85,6 @@
 </section>
 
 
-  <!-- Text-->
-
-
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-
-                  </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
   <!-- Video-->
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
     <div class="container">
@@ -107,24 +92,52 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/c_JHjUFfOs8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
+                        <strong>Bernard Parmegiani - De Natura Sonorum (1975)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
-                    </p>
+                      É una chiave di lettura del De Rerum Natura di Lucrezio Caro, brano che possiamo definire come ancora attuale (brano di 44 anni fa) che ha fatto balzare in avanti la ricerca della musica elettronica. Con il De Natura Sonorum ogni limite tra concretismo e sintesi diventa più labile.                    </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<br>
-<br>
+
+  <!-- DoubleText-->
+<section data-bs-version="5.1" class="content10 cid-sZHw0d1QPi" id="content10-2f">  
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md">
+                <p class="mbr-text mbr-fonts-style display-7">
+                    Shape your future web project with the Mobirise app.
+                </p>
+            </div>
+            <div class="col-md-12 col-lg-6">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Mobirise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools available today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Utilizza suoni strumentali e di sintesi e utilizza la contrapposizione tra materiali di sintesi e concreti. De Natura Sonorum è un sublimato del sonoro e del compositivo e si pone anni luce avanti a Luc Ferrari, voltando le spalle alla realtà del tempo, compone totalmente sul suono. Totale mancanza di necessità del mondo reale per la creazione di riferimenti, ognuno di noi fa la sua considerazione dell’opera. Troviamo una grande cura per l’eufonia tutta francese, ed un qualche legame con Debussy e Rameau. Parmegiani sa restare sul suono e lo fa sentire a 360 gradi. Si intravede l’alba di un atteggiamento post-moderno, e notiamo una parentela con lo spettralismo e notiamo che il materiale va totalmente a disposizione del compositore. Troviamo una maturità timbrica rispetto a Ferrari, una pulizia e una complessità del suono maggiore. Un gesto tipico di Parmegiani è la pulsazione regolare, archetipo di cui non possiamo disfarci, la pulsazione diviene sfondo ideale (Parmegiani realizza suoni con testa concreta e coda realizzata con la sintesi). Come fa Parmegiani a realizzare un brano di 40 minuti che regga? La prima parte è realizzata linearmente ed è circoscritta, mentre nella seconda parte cerca di andare oltre, e la prima parte risulta quasi come un apprendistato, apprendistato che ci ha proposto archetipi che vengono utilizzati nella seconda parte Il rapporto tra la prima e la seconda parte è rappresentato dall'inclusione ed esclusione degli elementi ed i singoli pezzi, portati avanti dai singoli sviluppi, fanno intendere cosa non c’è più che cosa c’è all'interno dei singoli momenti. Dal De Rerum Natura di Lucrezio, Parmegiani formula il titolo, la natura dei suoni, un po’ come Lucrezio riuscì a fare poesia liberandosi dalla schiavitù dello spirito, riuscendo a dare qualcosa alla materia senza dare un materiale, allo stesso modo Parmegiani, volta le spalle a tutta la retorica che la musica concreta ed elettronica si era portata dietro, realizzando una poesia della materia, costruendo un nuovo mondo retorico e sentimentale, basato solamente sul suono senza riferimenti mimetici. Il superamento del concretismo si è attutato grazie ad aspetti narrativi e di pura ricerca di come suonano i suoni, realizzandosi nella Spettromorfologia di Smalley (figlio della cultura concretista),e che prende come punto di riferimento il De Natura Sonorum Parmegiani è di formazione concretista e collagista, ed in quest’opera si scrolla di dosso la retorica, ed inizia ad utilizzare la sintesi.
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
 
 
 <!-- Prev/Next-->
