--- a/pages/learn/storia_elettroacustica/de_natura_sonorum.html
+++ b/pages/learn/storia_elettroacustica/de_natura_sonorum.html
@@ -107,19 +107,58 @@
     </div>
 </section>
 
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Composta da 2 grandi sezioni (divise a loro volta in 3 parti) con titoli significativi:
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
 
+<br><br>
   <!-- DoubleText-->
-<section data-bs-version="5.1" class="content10 cid-sZHw0d1QPi" id="content10-2f">  
+<section data-bs-version="5.1" class="content10 cid-sZHw0d1QPi" id="content10-2f">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md">
                 <p class="mbr-text mbr-fonts-style display-7">
-                    Shape your future web project with the Mobirise app.
+                  <strong>Prima Parte</strong>
+                  <ol>
+                    <li>Incidenze e risonanze</li>
+                    <li>Accidenti armonici</li>
+                    <li>Geologia sonora</li>
+                    <li>Dinamica della risonanza</li>
+                    <li>Studio elastico</li>
+                    <li>Coniugazione del timbro</li>
+                  </ol>
                 </p>
             </div>
             <div class="col-md-12 col-lg-6">
                 <p class="mbr-text mbr-fonts-style display-7">
-                  Mobirise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools available today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p>
+                  <strong>Seconda Parte</strong>
+                  <li>Incidenze e battimenti</li>
+                  <li>Nature effimere</li>
+                  <li>Materie indotte</li>
+                  <li>Onde incrociate</li>
+                  <li>Pieno e sciolto</li>
+                  <li>Punti contro campi (il piú lungo di tutti)</li>
+                </ol>
+1. Incidenze e battimenti
+
+2. nature effimere
+
+3. materie indotte
+
+4. onde incrociate
+
+5. pieno e sciolto
+
+6. punti contro campi (il piú lungo di tutti)
             </div>
         </div>
     </div>
