--- a/pages/learn.html
+++ b/pages/learn.html
@@ -107,7 +107,7 @@
                         </div>
                         <div class="col-12 col-md-5">
                             <div class="img-wrapper">
-                                <img src="https://www.gabrielavelitch.com/assets/images/learn/spectrogram.png">
+                                <img src="https://www.gabrielavelitch.com/assets/images/learn/spectrogram.png" href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html">
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         </div>
                         <div class="col-12 col-md-5">
                             <div class="img-wrapper">
-                                <img src="https://www.gabrielavelitch.com/assets/images/learn/graphscore.png">
+                                <img src="https://www.gabrielavelitch.com/assets/images/learn/graphscore.png" href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html">
                             </div>
                         </div>
                     </div>
