--- a/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html
+++ b/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html
@@ -93,38 +93,12 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Nel 1955 avviene la comparsa sulla scena internazionale dello Studio di Fonologia di Milano, punto di svolta per la musica dell’epoca, poiché archiviò la contrapposizione ideologica tra musica concreta ed elettronica (Parigi-Colonia), che non aveva modo di esistere, poiché a Colonia si affrontava musica contemporanea strutturalista e serialista, ed a Parigi, si avevano rapporti con il cinema e la radio. Si contrapponevano fra di loro, anche se praticavano arti diverse, Milano rappresentò un aspetto unitario fra le due, facendo perdere il senso della contrapposizione, esito condiviso con il De Natura Sonorum di Parmegiani. Milano ebbe un’importante dotazione strumentale che divenne ben presto migliore di quella di Colonia e Parigi, per via del fatto che lo studio di Milano venne proposto e messo su dalla volontà di 2 compositori (Berio e Maderna) e non era adibito primariamente per la radio (come Parigi e Colonia), a Milano lo studio aveva 9 oscillatori (moltissimi per l’epoca), che riuscivano a realizzare cose straordinarie (sarebbe stato molto più semplice realizzare Studie II a Milano). La dotazione di Milano si arricchi quando arrivo anche un riverberatore (camera riverberante), il filtro, il generatore di rumore bianco, i magnetofoni, dotazione utilissima e preziosissima per i compositori d’avanguardia, proprio a questa “élite” infatti era relegato lo studio, infatti potevano accedervi solo quei personaggi considerati all'avanguardia (atteggiamento post-moderno riguardo alla musica, tutti gli stili sono ammessi, anche la ricerca ed il linguaggio contemporaneo diviene stile, La mia etimologia è un calco del passato o è il presente?)
                   </p>
                 </div>
             </div>
         </div>
     </section>
-
-  <!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-    <div class="container">
-        <div class="title-wrapper mb-5">
-        </div>
-        <div class="row align-items-center">
-            <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-            </div>
-            <div class="col-12 col-lg">
-                <div class="text-wrapper">
-                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
-                    </h5>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<br>
-<br>
 
 
 <!-- Prev/Next-->
