--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -113,7 +113,7 @@
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/luc_ferrari.html" class="text-primary"><b>Luc Ferrari</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html" class="text-primary"><b>Evoluzione del Pensiero Elettroacustico</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/de_natura_sonorum.html" class="text-primary"><b>Analisi - De Natura Sonorum</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html" class="text-primary"><b>Studio di Fonologia di Milano (coming soon)</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html" class="text-primary"><b>Studio di Fonologia di Milano</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/bruno_maderna.html" class="text-primary"><b>Bruno Maderna (coming soon)</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/confronto_berio_stockhausen.html" class="text-primary"><b>Confronto Berio - Stockhausen (coming soon)</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/luigi_nono.html" class="text-primary"><b>Luigi Nono (coming soon)</b></a>
