--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -104,9 +104,13 @@
                   </h4>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <strong>
+                      ANALISI
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/analisi_della_musica_elettroacustica.html" class="text-primary"><b>Analisi della Musica Elettroacustica</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/leggi_della_gestalt.html" class="text-primary"><b>Leggi della Gestalt</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/mimetico_aurale.html" class="text-primary"><b>Mimetico-Aurale</b></a>
+                      <br>
+                      STORIA
+                      <br>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html" class="text-primary"><b>Nascita della Musica Concreta</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html" class="text-primary"><b>Musica Concreta - Primo Periodo</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_secondo_periodo.html" class="text-primary"><b>Musica Concreta - Secondo Periodo</b></a>
@@ -122,6 +126,7 @@
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/jean_claude_risset.html" class="text-primary"><b>Jean-Claude Risset</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/john_chowning.html" class="text-primary"><b>John Chowning</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html" class="text-primary"><b>Musica Digitale - Seconda Parte</b></a>
+                      </strong>
                       <br><br>
                   </p>
               </div>
