--- a/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html
+++ b/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Leggi della Gestalt</title>
+  <title>Studio di Fonologia di Milano</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Leggi della Gestalt</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Studio di Fonologia di Milano</strong></h4>
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                     Nel 1955 avviene la comparsa sulla scena internazionale dello Studio di Fonologia di Milano, punto di svolta per la musica dell’epoca, poiché archiviò la contrapposizione ideologica tra musica concreta ed elettronica (Parigi-Colonia), che non aveva modo di esistere, poiché a Colonia si affrontava musica contemporanea strutturalista e serialista, ed a Parigi, si avevano rapporti con il cinema e la radio. Si contrapponevano fra di loro, anche se praticavano arti diverse, Milano rappresentò un aspetto unitario fra le due, facendo perdere il senso della contrapposizione, esito condiviso con il De Natura Sonorum di Parmegiani. Milano ebbe un’importante dotazione strumentale che divenne ben presto migliore di quella di Colonia e Parigi, per via del fatto che lo studio di Milano venne proposto e messo su dalla volontà di 2 compositori (Berio e Maderna) e non era adibito primariamente per la radio (come Parigi e Colonia), a Milano lo studio aveva 9 oscillatori (moltissimi per l’epoca), che riuscivano a realizzare cose straordinarie (sarebbe stato molto più semplice realizzare Studie II a Milano). La dotazione di Milano si arricchi quando arrivo anche un riverberatore (camera riverberante), il filtro, il generatore di rumore bianco, i magnetofoni, dotazione utilissima e preziosissima per i compositori d’avanguardia, proprio a questa “élite” infatti era relegato lo studio, infatti potevano accedervi solo quei personaggi considerati all'avanguardia (atteggiamento post-moderno riguardo alla musica, tutti gli stili sono ammessi, anche la ricerca ed il linguaggio contemporaneo diviene stile, La mia etimologia è un calco del passato o è il presente?)
                   </p>
                 </div>
